Fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ footer strong {
     header .logo {
         width: auto;
         height: 100%;
+        padding: 0;
     }
     
     header .pages {
@@ -517,7 +518,7 @@ footer strong {
     .popular {
         grid-row: 1 / 2;
         width: 100vw;
-        margin: 0 0 5vw 0;
+        margin: 0 auto 5vw auto;
     }
     
     .popular h2 {
@@ -529,7 +530,7 @@ footer strong {
         font-size: 6vw;
         margin: 3vw 4vw 5vw 4vw;
     }
-
+    
     .popular .popular_figure {
         height: auto;
         width: auto;
